--- a/httpclient/build.gradle
+++ b/httpclient/build.gradle
@@ -13,9 +13,9 @@ apply from: '../common.gradle'
 dependencies {
     // we need the core of the project!
     compile project(':core')
-    
-    // apache http commons (https://hc.apache.org/httpcomponents-client-ga/httpclient/dependency-info.html)
-    compile 'org.apache.httpcomponents:httpclient:4.5.13'
+
+    // Replacement of: `org.apache.httpcomponents:httpclient`, so this can be used on Android
+    implementation 'cz.msebera.android:httpclient:4.5.8'
 
     // apache commons logging  (https://mvnrepository.com/artifact/commons-logging/commons-logging/1.2)
     implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
